# pca_wahlanalyse

./: README.md  meson.build  pyproject.toml  requirements.txt  setup.py
notebooks/: beispiel_btw2021.ipynb  beispiel_btw2025.ipynb  beispiel_hb2023.ipynb  beispiel_hh2025.ipynb  beispiel_pca.ipynb  template.ipynb
pca_wahl/: __init__.py  meson.build
pca_wahl/utils/: __init__.py  meson.build  utils.py
